[gd_scene load_steps=6 format=3 uid="uid://b3t4ewrh13hqf"]

[ext_resource type="Script" path="res://Scenes/Slime Enemy/enemy.gd" id="1_yi3wr"]
[ext_resource type="Texture2D" uid="uid://b00v2ovebyuny" path="res://Sprites/Lumerie Slime/Lumerie_Slime_BaseSprite.png" id="2_fwgxw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ymf8y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fwgxw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e60kr"]
radius = 296.108

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ux0mo"]
size = Vector2(116.5, 114.5)

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_yi3wr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.5, 0)
scale = Vector2(2.08, 2.08)
sprite_frames = SubResource("SpriteFrames_ymf8y")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_e60kr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.75, 0.25)
shape = SubResource("RectangleShape2D_ux0mo")

[node name="collision_detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_detection"]
position = Vector2(0.75, 0.25)
scale = Vector2(1.1, 1.1)
shape = SubResource("RectangleShape2D_ux0mo")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="collision_detection" to="." method="_on_collision_detection_body_entered"]
